test/ll_lexeme_name_string_test.test
TESTING "("
    VALUE: `('
TESTING "(|"
    VALUE: [`(' `|']
TESTING "<+"
    VALUE: `<+'
TESTING "<+<SP>-"
    VALUE: [`<+' `-']
TESTING "<SP><SP><+<SP><SP>+><SP>"
    VALUE: [`<+' `+>']
TESTING "<SP><SP><HT><SP><SP>"
ERROR: empty name string
    VALUE: ERROR
TESTING "<+<SP>foo<SP>+>"
ERROR: Lexeme of illegal type (WORD) in name string:
<+<SP>foo<SP>+>
      ^^^
    VALUE: ERROR
TESTING "<+<SP><LF><SP>+>"
ERROR: Lexeme of illegal type (LINE_BREAK) in name string:
<+<SP>
      ^
    VALUE: ERROR
TESTING "<+<SP><SOH><SP>+>"
ERROR: Lexeme of illegal type (MISPLACED_CHARACTER) in name string:
<+<SP><SOH><SP>+>
      ^^^^^
    VALUE: ERROR
TESTING ""<FOO>"
ERRONEOUS ATOM: UNRECOGNIZED_ESCAPE_SEQUENCE:
"<FOO>
 ^^^^^
    VALUE: ERROR
